Salesforce/main/default/main/default/objects/Contrato__c/Contrato__c.object-meta.xml
<CustomObject>
    <description>CONTRATO DE LICENCIAMENTO PARA MULTIPLICAÇÃO E COMERCIALIZAÇÃO</description>
    <label>Contrato de Multiplicação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Numero do Contrato de Multiplicação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos de Multiplicação</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>