Salesforce/main/default/main/default/objects/Contrato__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipName>Contrato_de_Multiplica_o</relationshipName>
    <type>Lookup</type>
</CustomField>