Salesforce/main/default/main/default/objects/Contrato__c/fields/Contrato_ant__c.field-meta.xml
<CustomField>
    <fullName>Contrato_ant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo guarda una referencia al contrato original, en el caso de que el contrato sea resultado de una clonación</description>
    <label>Contrato Original</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Contratos de Multiplicação</relationshipLabel>
    <relationshipName>Contratos_de_Multiplica_o</relationshipName>
    <type>Lookup</type>
</CustomField>