Salesforce/main/default/main/default/objects/Contrato__c/fields/Contrato_marco__c.field-meta.xml
<CustomField>
    <fullName>Contrato_marco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato guarda chuva para 3 safras</description>
    <label>Contrato Macro</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Termos Aditivos</relationshipLabel>
    <relationshipName>Contratos_de_Multiplicacion</relationshipName>
    <type>Lookup</type>
</CustomField>