Salesforce/main/default/main/default/objects/Contrato__c/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos_de_Multiplicacao</relationshipName>
    <type>Lookup</type>
</CustomField>