Salesforce/main/default/main/default/objects/Contrato__c/fields/Cotacao_de_soja__c.field-meta.xml
<CustomField>
    <fullName>Cotacao_de_soja__c</fullName>
    <description>No pagamento dos Royalties, usamos a cotação de soja de duas empresas, dependendo da região da conta</description>
    <inlineHelpText>No pagamento dos Royalties, usamos a cotação de soja de duas empresas, dependendo da região da conta</inlineHelpText>
    <label>Cotação de soja</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Cota_o__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>COAMO</fullName>
            </value>
            <value>
                <fullName>COTRIJAL</fullName>
            </value>
            <value>
                <fullName>SAFRAS &amp; MERCADO</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>C. VALE</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>ASUNCION</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Campo Grande (MS)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rio Verde (GO)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Sorriso (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Passo Fundo (RS)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Londrina (PR)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rondonópolis (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Barreiras (BA)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Uberlandia (MG)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Diamantino (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Pedro Afonso (TO)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Brasília (DF)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Primavera (MT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>