Salesforce/main/default/main/default/objects/Contrato__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edição</fullName>
                <default>true</default>
                <label>Edição</label>
            </value>
            <value>
                <fullName>Pendente de Aprovação</fullName>
            </value>
            <value>
                <fullName>Aguardando Assinatura</fullName>
            </value>
            <value>
                <fullName>Pendente de Impressão</fullName>
            </value>
            <value>
                <fullName>Pendente de Envio</fullName>
            </value>
            <value>
                <fullName>Pendente de Postagem</fullName>
            </value>
            <value>
                <fullName>Aguarda Retorno</fullName>
            </value>
            <value>
                <fullName>Chegou</fullName>
            </value>
            <value>
                <fullName>Inutilizado</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>