Salesforce/main/default/main/default/objects/Contrato__c/fields/log_cambios__c.field-meta.xml
<CustomField>
    <fullName>log_cambios__c</fullName>
    <description>Campo para especificar los cambios que se hicieron en un contrato clonado a partir de la comparacion con el contrato original</description>
    <label>Log de alterações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>