Salesforce/main/default/main/default/objects/Contrato__c/fields/Meta_Qde_comodato_de_area__c.field-meta.xml
<CustomField>
    <fullName>Meta_Qde_comodato_de_area__c</fullName>
    <label>Meta Qde Comodato de Área</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>