Salesforce/main/default/main/default/objects/Contrato__c/fields/Meta_Qde_Dias_de_Campo__c.field-meta.xml
<CustomField>
    <fullName>Meta_Qde_Dias_de_Campo__c</fullName>
    <label>Meta Qde Días de Campo Sem Custo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>