Salesforce/main/default/main/default/objects/Contrato__c/fields/Meta_Qde_Emplacamentos__c.field-meta.xml
<CustomField>
    <fullName>Meta_Qde_Emplacamentos__c</fullName>
    <label>Meta Qde Emplacamentos</label>
    <summarizedField>Item_del_Contrato__c.Quantidade__c</summarizedField>
    <summaryFilterItems>
        <field>Item_del_Contrato__c.Tipo_de_Evento__c</field>
        <operation>equals</operation>
        <value>Emplacamento</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_del_Contrato__c.Contrato_de_Multiplicacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>