Salesforce/main/default/main/default/objects/Contrato__c/fields/Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Multiplicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta do multiplicador</description>
    <label>Multiplicador</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contrato_de_Multiplica_o</relationshipName>
    <type>Lookup</type>
</CustomField>