Salesforce/main/default/main/default/objects/Contrato__c/fields/Nome_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nome_Fantasia__c</fullName>
    <formula>Multiplicador__r.Nome_fantasia__c</formula>
    <label>Nome Fantasia Multiplicador</label>
    <type>Text</type>
</CustomField>