Salesforce/main/default/main/default/objects/Contrato__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <description>Informações genéricas sobre o processo de recebimento dos contratos</description>
    <inlineHelpText>Informações genéricas sobre o processo de recebimento dos contratos</inlineHelpText>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>