Salesforce/main/default/main/default/objects/Contrato__c/fields/Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel__c</fullName>
    <formula>text(Multiplicador__r.Responsavel__c)</formula>
    <label>Responsável</label>
    <type>Text</type>
</CustomField>