Salesforce/main/default/main/default/objects/Contrato__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>Qual dos funcionários da Brasmax que estará responsável pela conta</description>
    <inlineHelpText>Qual dos funcionários da Brasmax que estará responsável pela conta</inlineHelpText>
    <label>Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Jacques Müllich</fullName>
            </value>
            <value>
                <fullName>Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>Thiago Schwonka</fullName>
            </value>
            <value>
                <fullName>Lucas Pires</fullName>
            </value>
            <value>
                <fullName>Fernando Frehner</fullName>
            </value>
            <value>
                <fullName>Sergio Bertagnolli</fullName>
            </value>
            <value>
                <fullName>Fernando Gaspar</fullName>
            </value>
            <value>
                <fullName>Antonio Paiva</fullName>
            </value>
            <value>
                <fullName>Tiago Goulart</fullName>
            </value>
            <value>
                <fullName>Jorge Cristiano Rosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>