Salesforce/main/default/main/default/objects/Contrato__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRMX</fullName>
            </value>
            <value>
                <fullName>DSEM</fullName>
            </value>
            <value>
                <fullName>NEOG</fullName>
            </value>
            <value>
                <fullName>DAGMA</fullName>
            </value>
            <value>
                <fullName>LICENÇAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>