Salesforce/main/default/main/default/objects/Contrato__c/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>IF(ISPICKVAL(Sociedad__c,&apos;BRMX&apos;), &apos;BRMX&apos;, IF(ISPICKVAL(Sociedad__c,&apos;DSEM&apos;),&apos;DSEM&apos;,&apos;BRMX&apos;))</formula>
    <label>Sociedad_SF</label>
    <type>Text</type>
</CustomField>