Salesforce/main/default/main/default/objects/Contrato__c/fields/Status_Contrato_Marco__c.field-meta.xml
<CustomField>
    <fullName>Status_Contrato_Marco__c</fullName>
    <label>Status Contrato Marco</label>
    <length>40</length>
    <type>Text</type>
</CustomField>