Salesforce/main/default/main/default/objects/Contrato__c/fields/Tipo_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contrato__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MULTIPLICAÇÃO</fullName>
                <default>true</default>
                <label>MULTIPLICAÇÃO</label>
            </value>
            <value>
                <fullName>BASICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>