Salesforce/main/default/main/default/objects/Contrato__c/fields/Tipos_de_Assinaturas__c.field-meta.xml
<CustomField>
    <fullName>Tipos_de_Assinaturas__c</fullName>
    <defaultValue>&apos;Manual&apos;</defaultValue>
    <label>Tipos de Assinatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eletronica</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>