Salesforce/main/default/main/default/objects/Contrato__c/recordTypes/BRMX.recordType-meta.xml
<RecordType>
    <fullName>BRMX</fullName>
    <active>true</active>
    <description>Contratos de la sociedad BRASMAX</description>
    <label>BRMX</label>
</RecordType>