Salesforce/main/default/main/default/objects/Contrato__c/recordTypes/Termo_Aditivo.recordType-meta.xml
<RecordType>
    <fullName>Termo_Aditivo</fullName>
    <active>true</active>
    <description>Termo Aditivos de Contrato de multiplicação - a partir de 2018</description>
    <label>Termo Aditivo Comerciais</label>
</RecordType>