Salesforce/main/default/main/default/objects/Contrato__c/recordTypes/Termo_Aditivo_Lan_amentos.recordType-meta.xml
<RecordType>
    <fullName>Termo_Aditivo_Lan_amentos</fullName>
    <active>true</active>
    <label>Termo Aditivo Novas Biotecnologias</label>
</RecordType>