Salesforce/main/default/main/default/objects/Contrato__c/validationRules/Validar_Contrato_Marco_Recibido.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Contrato_Marco_Recibido</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(TEXT(Estado__c)=&quot;Edição&quot;, Status_Contrato_Marco__c=&quot;0&quot;),true,false)</errorConditionFormula>
    <errorMessage>O contrato guarda chuva deve estar no estado &quot;Chegou&quot;</errorMessage>
</ValidationRule>