Salesforce/main/default/main/default/objects/Contrato__c/validationRules/Validar_meta_por_marca.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_meta_por_marca</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Sociedad__c,&quot;BRMX&quot;), 
OR(
  Meta_Qde_Dias_de_Campo__c &gt; 0,
  Meta_Qde_comodato_de_area__c &gt; 0
)
)</errorConditionFormula>
    <errorMessage>As Metas de Días de Campo e comodato de Área não devem ser completadas para Brasmax</errorMessage>
</ValidationRule>