Salesforce/main/default/main/default/objects/Contrato__c/listViews/NEOGEN.listView-meta.xml
<ListView>
    <fullName>NEOGEN</fullName>
    <columns>NAME</columns>
    <columns>Multiplicador__c</columns>
    <columns>Safra__c</columns>
    <columns>Sociedad__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sociedad__c</field>
        <operation>equals</operation>
        <value>NEOG</value>
    </filters>
    <label>NEOGEN</label>
</ListView>